# foreshadow

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  MANIFESTS.in  Makefile  README.md  README.rst  azure-pipelines.yml  foreshadow_boston_housing_linear_regression_override.json  optional_requirements.txt  pre_requirements.txt  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  searcher_script.py  setup.cfg  setup.py  setup_env.sh  test_requirements.txt  testing.py  tox.ini
.github/: issue_template.md  pull_request_template.md
ci/: install.yml  lint.yml  tests.yml
doc/: Makefile  api.rst  architecture.rst  changelog.rst  conf.py  contrib.rst  developers.rst  faq.rst  foreshadow_class.uml  foreshadow_sequence.uml  foreshadow_sequence_hyp.uml  foreshadow_sequence_main.uml  index.rst  make.bat  users.rst
examples/: adult_1.py  adult_2.py  adult_small.py  adult_x_proc_search.json  searcher_script.py  user_tutorial_demo.ipynb
examples/house_pricing/: house-prices-advanced-regression-techniques-publicleaderboard.csv  house_pricing.ipynb
examples/titanic/: titanic.ipynb  titanic.py
foreshadow/: ColumnTransformerWrapper.py  __init__.py  base.py  cachemanager.py  column_sharer.py  columnsharer.py  config.py  console.py  exceptions.py  foreshadow.py  fs_logging.py  helloworld.py  metrics.py  pandas_wrapper.py  parallelprocessor.py  pipeline.py  preparer.py  preprocessor.py  serializers.py  utils.py  wrapper.py
foreshadow/cleaners/: __init__.py  data_cleaner.py
foreshadow/cleaners/internals/: __init__.py  datetimes.py  drop.py  financial_cleaner.py  json_flattener.py
foreshadow/concrete/: __init__.py  externals.py
foreshadow/concrete/internals/: __init__.py  boxcox.py  dropfeature.py  dummyencoder.py  fancyimpute.py  financial.py  htmlremover.py  labelencoder.py  nan_filler.py  notransform.py  tfidf.py  tostring.py  uncommonremover.py
foreshadow/core/: __init__.py  base.py  column_sharer.py  data_preparer.py  fs_logging.py  gui.py  logging.py  newpreprocessor.py  notransform.py  pipeline.py  preparerstep.py  resolver.py  serialization.py  serializers.py  smarttransformer.py  wrapper.py
foreshadow/core/preparersteps/: __init__.py  data_cleaner.py  resolver.py
foreshadow/estimators/: __init__.py  auto.py  auto_estimator.py  config.py  estimator_wrapper.py  meta.py  meta_estimator.py
foreshadow/feature_engineerers/: __init__.py  feature_engineerer.py
foreshadow/feature_reducer/: __init__.py  feature_reducer.py
foreshadow/intents/: __init__.py  base.py  categorical.py  droppable.py  general.py  general_intents.py  intent_type.py  intents.py  intents_base.py  intents_registry.py  neither.py  numeric.py  other.py  registry.py  subnumeric.py  text.py
foreshadow/logging/: logging.py
foreshadow/metrics/: __init__.py  internals.py  metrics.py
foreshadow/newintents/: __init__.py  intents.py  resolver.py
foreshadow/old/: __init__.py  preprocessor.py
foreshadow/old/intents/: __init__.py  base.py  general.py  registry.py  subnumeric.py
foreshadow/optimizers/: __init__.py  optimizer.py  param_distribution.py  param_mapping.py  random_search.py  tuner.py
foreshadow/preparer/: __init__.py  parallelprocessor.py  pipeline.py  preparer.py  preparerstep.py
foreshadow/preparer/steps/: __init__.py  cleaner.py  feature_engineerer.py  feature_reducer.py  mapper.py  preparerstep.py  preprocessor.py  resolver.py
foreshadow/preprocessors/: __init__.py
foreshadow/smart/: __init__.py  all.py  auto_resolve_preview.py  cleaner.py  data_exporter.py  feature_engineerer.py  feature_exporter.py  feature_reducer.py  feature_summarizer.py  flatten.py  intentresolver.py  resolver.py  smart.py
foreshadow/smart/intent_resolving/: __init__.py  auto_resolve_preview.py  intentresolver.py
foreshadow/steps/: __init__.py  autointentmap.py  autointentresolve.py  cleaner.py  data_exporter.py  feature_engineerer.py  feature_exporter.py  feature_reducer.py  feature_summarizer.py  flattener.py  mapper.py  preparerstep.py  preprocessor.py
foreshadow/tests/: X_train_summary.json  foreshadow.json  foreshadow_linearRegression.json  foreshadow_logisticRegression.json  model.json  test_auto_estimator.py  test_column_sharer.py  test_config.py  test_console.py  test_foreshadow.py  test_helloworld.py  test_integration.py  test_intents_base.py  test_intents_registry.py  test_meta_estimator.py  test_metrics.py  test_preparer.py  test_preprocessor.py  test_transformers.py  test_utils.py  utils.py
foreshadow/tests/configs/: complete_pipeline_test.json  configs_default.pkl  configs_override3.json  configs_override4.json  empty_pipeline_test.json  invalid_optimizer_config.json  invalid_transformer_class.json  invalid_transformer_params.json  malformed_transformer.json  optimizer_test.json  override_column_intent_pipeline.json  override_intent_pipeline_multi.json  override_intent_pipeline_single.json  override_multi_pipeline.json  test.json  test_params.pkl  test_serialize.json
foreshadow/tests/data/: 23380.csv  adult_small.csv  anneal.csv  boston_housing_processed.csv  breast_cancer.csv  heart-h.csv  heart-h_impute_mean.csv  heart-h_impute_median.csv  heart-h_impute_mode.csv  heart-h_impute_multi.csv
foreshadow/tests/test_cleaners/: test_data_cleaner.py
foreshadow/tests/test_concrete/: test_na_filler.py
foreshadow/transformers/: __init__.py  base.py  complete_config.json  custom.py  custom_transformers.py  externals.py  fancyimpute.py  imputer.py  scaler.py  sklearn_externals.py  smart.py  smart_transformers.py  transformers.py
foreshadow/utils/: __init__.py  common.py  constants.py  data_summary.py  default_estimator_factory.py  override_substitute.py  testing.py  validation.py
newsfragments/: 112.feature  113.feature  118.feature  162.feature  74.feature  79.feature  93.feature  95.feature  96.feature  99.feature  data-summarization.feature  level1-optimization.feature  pass-through-feature-reducer.feature  process-safe-columnsharer.feature  serialization.feature
scripts/: macos.sh
(+161 files in other folders)
