[tool.poetry]
name = "foreshadow"
version = "0.1.0"
description = "Peer into the future of a data science project"
authors = [
    "Adithya Balaji <adithyabsk@gmail.com>",
    "Alexander Allen <arallen@ncsu.edu>"
]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://foreshadow.readthedocs.io"
repository = "https://github.com/georgianpartners/foreshadow"
documentation = "https://foreshadow.readthedocs.io"
keywords = [
    "feature",
    "machine",
    "learning",
    "automl",
    "foreshadow"
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
include = [
    "README.rst",
    "pyproject.toml",
    "tox.ini",
    "LICENSE"
]

[tool.poetry.dependencies]
auto-sklearn = { version = "0.5.2", optional = true }
category-encoders = "^1.2.8" # requires sklearn > 0.20 to upgrade
fancyimpute = "^0.3.2"
numpy = "^1.16.4"
pandas = "^0.23.3"
python = "^3.6"
scikit-learn = "^0.19.2"
scipy = "^1.1.0"
toml = "^0.10.0"
TPOT = "^0.10.1"

[tool.poetry.dev-dependencies]
black = {version = "^18.6b4", python = "^3.6"}
coverage = "^4.5.1"
coveralls = "^1.3.0"
darglint = "^0.5.6"
flake8-docstrings = "^1.3"
flake8= "^3.7"
isort = {version = "^4.3", extras = ["pyproject"]}
pre-commit = "^1.14.3"
pytest = "^3.6.2"
pytest-cov = "^2.5.1"
pytest-mock = "^1.10.0"
seed-isort-config = "^1.7"
sphinx = "^1.7.6"
sphinx_rtd_theme = "^0.4.1"
sphinxcontrib-plantuml = "^0.16.1"
towncrier = "^19.2"
tox = "^3.9.0"
wily = {version = "^1.12", python = "^3.6"}
xdoctest = "^0.8.1"

[tool.poetry.extras]
dev = ["auto-sklearn"]

[tool.poetry.scripts]
foreshadow = "foreshadow.console:cmd"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py36

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v -E dev
    poetry run pytest
"""

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
known_first_party = 'foreshadow'
known_third_party = ["category_encoders", "numpy", "pandas", "pytest", "scipy", "sklearn", "tpot"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[tool.towncrier]
# Usage: (Source: https://github.com/python-trio/trio/blob/master/pyproject.toml)
# - PRs should drop a file like "issuenumber.feature" in newsfragments
#   (or "bugfix", "doc", "removal", "misc"; misc gets no text, we can
#    customize this)
# - At release time after bumping version number, run:
#   poetry run towncrier --draft, then poetry towncrier
package = "foreshadow"
filename = "doc/changelog.rst"
directory = "newsfragments"

[build-system]
requires = ["numpy>=1.16.1", "Cython>=0.29.5", "poetry>=0.12"]
build-backend = "poetry.masonry.api"
