[tool.poetry]
name = "foreshadow"
version = "0.4.5"
description = "Peer into the future of a data science project"
authors = [
    "Adithya Balaji <adithyabsk@gmail.com>",
    "Alexander Allen <arallen@ncsu.edu>"
]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://foreshadow.readthedocs.io"
repository = "https://github.com/georgianpartners/foreshadow"
documentation = "https://foreshadow.readthedocs.io"
keywords = [
    "feature",
    "machine",
    "learning",
    "automl",
    "foreshadow"
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
include = [
    "README.rst",
    "pyproject.toml",
    "tox.ini",
    "LICENSE"
]

[tool.poetry.dependencies]
# auto-sklearn = { version = "0.5.2", optional = true }
category-encoders = "^1.2.8" # requires sklearn > 0.20 to upgrade
fancyimpute = "^0.3.2"
numpy = "^1.16.4"
pandas = "^0.25.0"
python = "^3.6"
scikit-learn = "^0.22.1"
scipy = "^1.1.0"
toml = "^0.10.0"
TPOT = "^0.11.0"
pyyaml = "^5.1"
jsonpickle = "^1.2"
marshmallow = "^2.19.5"
scs = "<=2.1.0"  # scs introduced a bug

# docs need to be distributed for readthedocs
sphinx = { version ="^1.7.6", optional = true }
sphinx_rtd_theme = { version ="^0.4.1", optional = true }
sphinxcontrib-plantuml = { version ="^0.16.1", optional = true }
docutils = { version ="<0.15.1", optional= true }  # hot fix: https://github.com/sdispater/poetry/issues/1194
patchy = "^1.5"
hyperopt = "^0.1.2"

[tool.poetry.dev-dependencies]
# Linting
flake8= "^3.7"
darglint = "^0.5.6"
flake8-docstrings = "^1.3"
pydocstyle = "<4"  # temporary fix for https://gitlab.com/pycqa/flake8-docstrings/issues/36
black = {version = "^18.6b4", python = "^3.6"}
isort = {version = "^4.3", extras = ["pyproject"]}
seed-isort-config = "^1.7"

# Testing
pytest = "^3.6.2"
pytest-cov = "^2.5.1"
pytest-mock = "^1.10.0"
xdoctest = "^0.8.1"
coverage = "^4.5.1"

# Automation
pre-commit = "^1.14.3"
towncrier = "^19.2"
tox = "^3.9.0"


[tool.poetry.extras]
doc = ["sphinx", "sphinx_rtd_theme", "sphinxcontrib-plantuml", "docutils"]

# [tool.poetry.extras]
# dev = ["auto-sklearn"]

[tool.poetry.scripts]
foreshadow = "foreshadow.console:cmd"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py36

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v -E dev
    poetry run pytest
"""

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
known_first_party = 'foreshadow'
known_third_party = ["category_encoders", "dill", "hyperopt", "marshmallow", "numpy", "pandas", "patchy", "pytest", "scipy", "sklearn", "tpot", "tqdm", "yaml"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[tool.towncrier]
# Usage: (Source: https://github.com/python-trio/trio/blob/master/pyproject.toml)
# - PRs should drop a file like "issuenumber.feature" in newsfragments
#   (or "bugfix", "doc", "removal", "misc"; misc gets no text, we can
#    customize this)
# - At release time after bumping version number, run:
#   poetry run towncrier --draft, then poetry towncrier
package = "foreshadow"
filename = "doc/changelog.rst"
directory = "newsfragments"

[build-system]
requires = ["numpy>=1.16.1", "Cython>=0.29.5", "poetry>=0.12"]
build-backend = "poetry.masonry.api"
